src/other/mico-2.3.12/test/idl/error/expected-stderr-case3.idl
case3.idl:18: reference to identifier 'L' is ambiguous
